# weisswurschtis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: api.md  index.md
src/weisswurschtis/: __init__.py  config.py  main.py  utils.py
tests/: __init__.py  test_main.py  test_utils.py
